--- a/calculations-julia-colab.ipynb
+++ b/calculations-julia-colab.ipynb
@@ -22,6 +22,17 @@
   },
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/DepartmentOfStatisticsPUE/job-vacancies-capture-recapture/edit/main/calculations-julia-colab.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    }
+    
+    {
       "cell_type": "code",
       "metadata": {
         "id": "PMGwZ7aFJL8Y"
@@ -90,3 +101,5 @@
         }
       ]
     }
+  ]
+}
