--- a/calculations-julia-colab.ipynb
+++ b/calculations-julia-colab.ipynb
@@ -2,9 +2,9 @@
   "nbformat": 4,
   "nbformat_minor": 0,
   "metadata": {
-    "accelerator": "GPU",
+    "accelerator": "CPU",
     "colab": {
-      "name": "Julia_1.6.0.ipynb",
+      "name": "calculations-julia-colab.ipynb",
       "provenance": [],
       "collapsed_sections": []
     },
